--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -36,12 +36,12 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Chat [{{room_id}}]</title>
+    <title>EDU-HIVE [{{room_id}}]</title>
 </head>
 <body>
     
     <div class="heading mb-4">
-        <h1 class="display-4">Video Chat</h1>
+        <h1 class="display-4">EDU-HIVE</h1>
         <div class="room-info">
             <h3>Room: <span class="heading-mark">{{room_id}}</span></h3>
             <h5>You have joined as <span class="heading-mark">{{display_name}}</span></h5>
