--- a/templates/login.html
+++ b/templates/login.html
@@ -26,8 +26,11 @@
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Login</button>
                 </form>
+                <a style="justify-content: center;" href="{{ url_for('signup') }}" >Signup</a>
             </div>
         </div>
+        
     </div>
+    
 </body>
 </html>
