--- a/templates/chatroom_checkpoint.html
+++ b/templates/chatroom_checkpoint.html
@@ -26,6 +26,11 @@
     <title>EDU-HIVE [{{room_id}}]</title>
 </head>
 <body>
+    {% extends 'base.html' %}
+    {% block title %}Student Dashboard{% endblock %}
+    
+    {% block content %}
+    <!-- Add any dashboard-specific content here -->
 
     <div class="heading mb-4">
         <h1 class="display-4">EDU-HIVE</h1>        
@@ -42,7 +47,8 @@
                 </p>
                 <form method="POST" onsubmit="return validate()" class="form shadow" style="max-width:400px; margin-left: auto; margin-right: auto;">
                     <div class="input-group mb-3">
-                        <input type="text" name="display_name" id="display_name" class="form-control" placeholder="Display Name" autofocus required>
+                        <input type="text" name="display_name" id="display_name" class="form-control" value="{{ current_user.username}}" autofocus readonly required>
+
                         <div class="input-group-append">
                             <input type="submit" value="Join" class="btn btn-primary">                            
                         </div>
@@ -77,5 +83,6 @@
         </div>
         
     </div>
+    {% endblock %}
 </body>
 </html>
