--- a/templates/tutorprofile.html
+++ b/templates/tutorprofile.html
@@ -6,26 +6,36 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <title>{{ tutor.name }}'s Profile</title>
+    <title>{{ tutors[0].username }}'s Profile</title>
 </head>
 <body>
 
     <div class="container mt-5">
         <div class="card">
             <div class="card-body">
-                <h2 class="card-title">{{ tutor.name }}</h2>
-                <p class="card-text"><strong>Subject:</strong> {{ tutor.subject }}</p>
-                <p class="card-text"><strong>Cost:</strong> {{ tutor.cost }}</p>
+                <h2 class="card-title">{{ tutors[0].username }}</h2>
+                <h4>Courses:</h4>
+                {% if tutors and tutors | length > 0 %}
+                    <ul class="list-group mb-3">
+                        {% for tutor in tutors %}
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                <div>
+                                    <strong>Subject:</strong> {{ tutor.subject }} <br>
+                                    <strong>Cost:</strong> {{ tutor.cost }}
+                                </div>
+                                <form action="{{ url_for('subscribed', tutor_id=tutor.id, tutor=tutor.username, subject=tutor.subject) }}" method="post">
+                                    <button type="submit" class="btn btn-primary btn-sm">Subscribe</button>
+                                </form>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <p>No subjects listed</p>
+                {% endif %}
                 <p class="card-text">Additional details about the tutor can go here.</p>
                 <a href="/" class="btn btn-secondary">Back to Explore</a>
             </div>
         </div>
-        <form action="{{ url_for('subscribed', tutor_id= session['id']) }}" method="post">
-
-
-            <button type="submit">Subscribe</button>
-        </form>
-        
     </div>
 
 </body>
