--- a/templates/tutorprofile.html
+++ b/templates/tutorprofile.html
@@ -6,14 +6,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <title>{{ tutors[0].username }}'s Profile</title>
+    <title>Tutors's Profile</title>
 </head>
 <body>
+    {% extends 'base.html' %}
+
+    {% block title %}Tutor Dashboard{% endblock %}
+    
+    {% block content %}
+    <h1>Welcome to tutor profile, {{ current_user.username}}!</h1>
+    <!-- Add any dashboard-specific content here -->
 
     <div class="container mt-5">
         <div class="card">
             <div class="card-body">
-                <h2 class="card-title">{{ tutors[0].username }}</h2>
+                <h2 class="card-title">{{ tutors.username }}</h2>
                 <h4>Courses:</h4>
                 {% if tutors and tutors | length > 0 %}
                     <ul class="list-group mb-3">
@@ -39,10 +46,11 @@
                     <p>No subjects listed</p>
                 {% endif %}
                 <p class="card-text">Additional details about the tutor can go here.</p>
-                <a href="/" class="btn btn-secondary">Back to Explore</a>
+                <a href="{{ url_for('explore', user_id=current_user.id)}}" class="btn btn-secondary">Back to Explore</a>
             </div>
         </div>
     </div>
 
+    {% endblock %}
 </body>
 </html>
