--- a/templates/tutor_dashboard.html
+++ b/templates/tutor_dashboard.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <title>Tutor Dashboard</title>
 </head>
 <body>
     {% extends 'base.html' %}
 
-{% block title %}Tutor Dashboard{% endblock %}
+    {% block title %}Student Dashboard{% endblock %}
+    
+    {% block content %}
+    <h1>Welcome to your dashboard, {{ current_user.username }}!</h1>
+    <p>Here you can explore tutors, manage sessions, and more.</p>
+    <!-- Add any dashboard-specific content here -->
+    {% endblock %}
 
-{% block content %}
-<h1>Welcome to your dashboard, {{ current_user.username}}!</h1>
-<p>Here you can manage your gigs, view students, and more.</p>
-<!-- Add any dashboard-specific content here -->
-
-{% endblock %}
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
