--- a/templates/edit_tutor.html
+++ b/templates/edit_tutor.html
@@ -23,7 +23,7 @@
         <ul class="list-group">
             {% for subject in tutor[3] %}
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <form action="{{ url_for('edit_tutor', tutor_id=tutor[0]) }}" method="POST" class="form-inline mr-3">
+                    <form onsubmit="return confirm('Are you sure?');" action="{{ url_for('edit_tutor', tutor_id=tutor[0]) }}" method="POST" class="form-inline mr-3">
                         <div class="form-group mr-3">
                             <input hidden type="text" name="username" class="form-control" value="{{ tutor[1] }}" required>
         
@@ -38,7 +38,7 @@
                     </form>
 
                     <!-- Remove Button -->
-                    <form action="{{ url_for('remove_subject', username=tutor[1], subject=subject.subject) }}" method="POST">
+                    <form onsubmit="return confirm('Are you sure?');" action="{{ url_for('remove_subject', username=tutor[1], subject=subject.subject) }}" method="POST">
                         <button type="submit" class="btn btn-danger btn-sm">Remove</button>
                     </form>
                 </li>
