--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -22,7 +22,6 @@
     <!-- custom css -->
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='chatroom.css')}}">
-    
 
     <script type="text/javascript"> 
         var myRoomID = "{{room_id}}"; 
@@ -30,6 +29,7 @@
         var audioMuted = "{{mute_audio}}"=="1";
         var videoMuted = "{{mute_video}}"=="1";
         console.log(">> {{mute_audio}}, {{mute_video}}", audioMuted, videoMuted);
+
     </script>
     <script src="{{url_for('static', filename='chatroom_ui.js')}}"></script>
     <script src="{{url_for('static', filename='chatroom_networking.js')}}"></script>
@@ -37,6 +37,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EDU-HIVE [{{room_id}}]</title>
+    <style>
+
+        /* Hide the full-screen button */
+        video::-webkit-media-controls-play-button,
+        video::-webkit-media-controls-volume-slider,
+        video::-webkit-media-controls-mute-button,
+        video::-webkit-media-controls-current-time-display
+        {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     {% extends 'base.html' %}
@@ -67,11 +78,12 @@
                         mic
                     </span>
                 </button>
-                <button id="bttn_vid_mute"class="btn btn-lg btn-outline-secondary rounded-circle">
+                <button id="bttn_vid_mute" class="btn btn-lg btn-outline-secondary rounded-circle">
                     <span id="vid_mute_icon" class="material-icons pt-2">
                         videocam
                     </span>
                 </button>
+                
                 <button id="call_end" class="btn btn-lg btn-danger rounded-circle">
                     <span class="material-icons pt-2">
                         call_end
@@ -80,7 +92,8 @@
             </div>
             <div id="div_local_vid" class="col-5 col-md-4 col-lg-3 video-item ml-auto">
                 <div class="vid-wrapper">
-                    <video id="local_vid" autoplay muted></video>
+                    <video id="local_vid" id="myVideo" autoplay muted controls></video>
+                    
                 </div>
             </div>
         </div>
