--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -4,7 +4,10 @@
     <!-- icon -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=present_to_all" />
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=present_to_all" />
+   
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=screen_share" />
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=brush" />
     <!-- socketio -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" integrity="sha512-v8ng/uGxkge3d1IJuEo6dJP8JViyvms0cly9pnbfRxT6/31c3dRWxIiwGnMSWwZjHKOuY3EVmijs7k1jz/9bLA==" crossorigin="anonymous"></script>
     
@@ -93,9 +96,15 @@
                     <span id="toggle_feed_icon" class="material-icons pt-2">image</span>
                 </button>-->
 
-                <button id="bttn_share_screen" class="btn btn-lg btn-outline-secondary rounded-circle">
+                <button id="bttn_share_screen" class="btn btn-lg  rounded-circle">
                     <span class="material-symbols-outlined">
-                        present_to_all
+                        screen_share
+                        </span>
+                </button>
+
+                <button id="bttn_canvas" class="btn btn-lg btn-outline-secondary rounded-circle" onclick="window.location.href='https://www.example.com'">
+                    <span class="material-symbols-outlined">
+                        brush
                         </span>
                 </button>
 
